# ai-job-hunter-app

./: .aider.conf.yml  .clinerules  .coderabbit.yaml  .codexrules  .gitignore  .gitleaks.toml  .lighthouserc.json  .mcp.json.example  .npmrc  .prettierignore  .releaserc.json  .roorules  .windsurfrules  AGENTS.md  AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CUsersSaeed.claudememorylessons.jsonl  LICENSE  README.md  SECURITY.md  commitlint.config.mjs  dangerfile.ts  downloads.json  electron-builder.yml  eslint.a11y.config.mjs  eslint.config.mjs  i18next-parser.config.mjs  i18next.config.ts  knip.json  lint-staged.config.mjs  lostpixel.config.ts  lychee.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release.config.mjs  review-smoke-test.ts  sgconfig.yml  (+4 more)
apps/tauri/src-tauri/: Cargo.toml  clippy.toml  deny.toml  tauri.conf.json
apps/tauri/src-tauri/.config/: nextest.toml
apps/tauri/src-tauri/binaries/: .gitignore
apps/tauri/src-tauri/capabilities/: default.json
apps/tauri/src-tauri/fonts/: README.md  download-fonts.ps1
apps/tauri/src-tauri/icons/: icon.icns
apps/tauri/src-tauri/src/: apply_helpers.rs  autopilot.rs  autopilot_helpers.rs  autopilot_scheduler.rs  browser.rs  commands.rs  conversations.rs  credentials.rs  data_store.rs  db.rs  documents.rs  error.rs  job_preferences.rs  jobs.rs  lib.rs  main.rs  observability.rs  performance.rs  postings.rs  sidecar.rs  updater.rs
apps/tauri/src-tauri/src/ai_generations/: mod.rs  test.rs
apps/tauri/src-tauri/src/applications/: mod.rs  test.rs
apps/tauri/src-tauri/src/apply_helpers/: mod.rs
apps/tauri/src-tauri/src/applying/: captcha_handler.rs  error_handler.rs  form_filler.rs  mod.rs  registry.rs  runtime.rs  selectors.rs  types.rs
apps/tauri/src-tauri/src/applying/boards/: glassdoor.rs  greenhouse.rs  indeed.rs  linkedin.rs  mod.rs  shared.rs  workday.rs  xing.rs
apps/tauri/src-tauri/src/applying/form_filler/: mod.rs  test.rs
apps/tauri/src-tauri/src/applying/registry/: mod.rs  test.rs
apps/tauri/src-tauri/src/applying/selectors/: mod.rs  test.rs
apps/tauri/src-tauri/src/applying/types/: mod.rs  test.rs
apps/tauri/src-tauri/src/autopilot/: mod.rs  test.rs
apps/tauri/src-tauri/src/autopilot_helpers/: mod.rs
apps/tauri/src-tauri/src/browser/: mod.rs  test.rs
apps/tauri/src-tauri/src/commands/: ai.rs  ai_generations.rs  ai_provider.rs  applications.rs  apply.rs  autopilot.rs  boards.rs  conversations.rs  cover_letter.rs  credentials.rs  data.rs  dialog.rs  documents.rs  geocoding.rs  github.rs  job_preferences.rs  jobs.rs  match_resume.rs  menu.rs  mod.rs  notifications.rs  pipeline.rs  privacy.rs  profile_import.rs  referrals.rs  resume.rs  scrape.rs  search.rs  support.rs  system.rs
apps/tauri/src-tauri/src/commands/ai_provider/: anthropic.rs  gemini.rs  mod.rs  ollama.rs  ollama_cloud.rs  openai.rs  research.rs  retry.rs  stream.rs  timeouts.rs
apps/tauri/src-tauri/src/commands/geocoding/: test.rs
apps/tauri/src-tauri/src/commands/system/: mod.rs  test.rs
apps/tauri/src-tauri/src/contact_profile/: mod.rs  test.rs
apps/tauri/src-tauri/src/conversations/: mod.rs  test.rs
apps/tauri/src-tauri/src/cover_letter/: mod.rs
apps/tauri/src-tauri/src/cover_letter/cache/: mod.rs
apps/tauri/src-tauri/src/cover_letter/leakage/: mod.rs
apps/tauri/src-tauri/src/cover_letter/llm/: anthropic.rs  mod.rs  ollama.rs  openai.rs
apps/tauri/src-tauri/src/cover_letter/research/: brief.rs  extractor.rs  mod.rs  search.rs
apps/tauri/src-tauri/src/credentials/: mod.rs  test.rs
apps/tauri/src-tauri/src/deeplink/: mod.rs  test.rs
apps/tauri/src-tauri/src/documents/: keywords.rs  mod.rs  test.rs
apps/tauri/src-tauri/src/events/: mod.rs
apps/tauri/src-tauri/src/export/: commands.rs  docx.rs  docx_renderer.rs  layout_pdf.rs  links.rs  mod.rs  model_docx.rs  parser.rs  pdf.rs  pdf_renderer.rs  templates.rs  types.rs
apps/tauri/src-tauri/src/export/commands/: mod.rs  test.rs
apps/tauri/src-tauri/src/export/docx/: mod.rs  test.rs
apps/tauri/src-tauri/src/extension_bridge/: auth.rs  import_tests.rs  mod.rs  register.rs  test.rs
apps/tauri/src-tauri/src/extraction/: clean.rs  cleanup.rs  confidence.rs  docx.rs  html.rs  image.rs  mod.rs  pdf.rs  pdf_ocr.rs  plain.rs  registry.rs  rtf.rs  structured.rs  types.rs
apps/tauri/src-tauri/src/ipc_contracts/: ai.rs  applications.rs  apply.rs  autopilot.rs  conversations.rs  date_filters.rs  documents.rs  event_payloads.rs  events.rs  matching.rs  mod.rs  provider_slots.rs  referrals.rs  resume.rs  scrape.rs  search.rs
apps/tauri/src-tauri/src/job_preferences/: mod.rs  test.rs
apps/tauri/src-tauri/src/jobs/: mod.rs  test.rs
apps/tauri/src-tauri/src/layout/: mod.rs  tests.rs
apps/tauri/src-tauri/src/limits/: mod.rs  test.rs
apps/tauri/src-tauri/src/locale/: mod.rs
apps/tauri/src-tauri/src/measure/: mod.rs
apps/tauri/src-tauri/src/model/: adapter.rs  document.rs  mod.rs  rich.rs  transform.rs
apps/tauri/src-tauri/src/net/: http.rs  mod.rs  ssrf.rs
apps/tauri/src-tauri/src/notifications/: mod.rs  tests.rs
apps/tauri/src-tauri/src/pipeline/: cache.rs  enrichment.rs  mod.rs  retry.rs  test.rs  validation.rs
apps/tauri/src-tauri/src/platform/: accent_watcher.rs  chrome.rs  config.rs  linux_appimage.rs  mod.rs  process.rs
apps/tauri/src-tauri/src/postings/: mod.rs  test.rs
apps/tauri/src-tauri/src/profile_import/: github.rs  linkedin.rs  mod.rs
apps/tauri/src-tauri/src/recommend/: mod.rs  tests.rs
apps/tauri/src-tauri/src/referrals/: mod.rs  test.rs
apps/tauri/src-tauri/src/scraping/: board_login.rs  engine.rs  http.rs  mod.rs  scrape_url.rs  types.rs
apps/tauri/src-tauri/src/splash/: mod.rs
apps/tauri/src-tauri/src/theme/: mod.rs
apps/tauri/src-tauri/src/tray/: mod.rs
apps/tauri/src-tauri/src/updater/: mod.rs  test.rs
apps/tauri/src-tauri/src/validate/: mod.rs  tests.rs
apps/tauri/src-tauri/tests/: architecture.rs  eval.rs
apps/tauri/src-tauri/tests/corpus/: README.md  synthetic_designer.tags  synthetic_designer.txt  synthetic_swe.tags
apps/tauri/src-tauri/tests/fixtures/: resume.txt
(+2541 files in other folders)
