[package]
name = "ajh-tauri"
version = "0.36.2"
edition = "2021"
description = "AI Job Hunter — Tauri desktop shell"
authors = ["Saeed Kolivand"]
# Application crate — never published to a registry. Marks it private so
# cargo-deny does not require a license field (see deny.toml [licenses].private).
publish = false

[features]
default = ["layout_pdf", "model_docx"]

# Render resumes through the canonical layout engine (model → LaidOutDoc → PDF)
# instead of the legacy renderer. On by default now that gap-by-gap snapshot
# parity with the legacy renderer is locked (see `layout::tests`). The legacy
# path stays compiled — it is the parity reference and still renders cover
# letters — so `--no-default-features` falls back to it.
layout_pdf = []

# Render resume DOCX from the canonical document model (real two-column table,
# native ats_mode) instead of the legacy line-based renderer. On by default;
# locked by golden invariants in `export::model_docx::test`. The legacy DOCX
# path stays compiled (it still renders cover letters), so `--no-default-features`
# falls back to it.
model_docx = []

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-log = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client used by all in-process scrapers and the apply flow.
# rustls-tls is added for the cover_letter pipeline (API calls use rustls client).
reqwest = { version = "0.13", features = ["json", "native-tls", "rustls", "rustls-native-certs", "cookies", "query", "http2"], default-features = false }

log = "0.4"
tracing = { version = "0.1", features = ["log"] }

tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

chromiumoxide = { version = "0.9", features = ["fetcher", "zip8"] }

futures = "0.3"
regex = "1"
# Font metrics for the canonical text-measurement layer (measure/): real glyph
# advances/line-heights from the bundled TTFs — the future replacement for the
# `× 0.52` char-width estimate in the PDF renderer. Pinned to match the version
# already present transitively so the tree carries a single ttf-parser.
ttf-parser = "0.25"
anyhow = "1"
thiserror = "2"
chrono = "0.4"
feed-rs = "2"
urlencoding = "2"
rand = "0.10"
async-trait = "0.1"
arc-swap = "1.7"
parking_lot = "0.12"

uuid = { version = "1", features = ["v4"] }

base64 = "0.22"
scraper = "0.27"
flate2 = "1.0"

# OS-native secret storage: DPAPI (Windows), Keychain (macOS), libsecret (Linux).
# keyring v4 split into keyring-core (Entry API) + platform store crates.
keyring-core = "1"

sysinfo = { version = "0.39", default-features = false, features = ["system"] }

# Cross-platform dependencies
rusqlite = { version = "0.40", features = ["bundled"] }
pdf-extract = "0.10"
zip = "8"
docx-rs = "0.4.20"
printpdf = "0.9.1"
lopdf = "0.40"


[target.'cfg(windows)'.dependencies]
wmi = "0.18"
windows-native-keyring-store = "1"

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1", features = ["keychain"] }

[target.'cfg(target_os = "linux")'.dependencies]
dbus-secret-service-keyring-store = { version = "1", features = ["crypto-rust", "vendored"] }

[dev-dependencies]
mockall = "0.14"
tempfile = "3.27"
proptest = "1.5"
wiremock = "0.6.5"
